--- a/style.css
+++ b/style.css
@@ -10,17 +10,22 @@ body {
   display: flex;
 
   border: 3px solid black;
-  /* height: 20vh; */
+  height: 30vh;
+  max-height: 50vh;
 
   /* главная ось */
   /* направление */
-  flex-direction: row;
+  /* flex-direction: row; */
 
   /* управление главной осью */
-  justify-content: center;
+  /* justify-content: center; */
 
   /* управление вспом осью */
   align-items: stretch;
+
+
+  /* управление переносом */
+  flex-wrap: wrap;
 }
 
 .elem {
@@ -28,7 +33,7 @@ body {
   padding: 20px 40px;
   border: 2px solid rgb(100, 5, 100);
   background-color: tomato;
-  align-items: flex-end;
+  align-items: center;
   text-align: center;
 }
 
