--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ body {
   display: flex;
 
   border: 3px solid black;
-  height: 30vh;
-  max-height: 50vh;
+  height: 50vh;
 
   /* главная ось */
   /* направление */
@@ -21,8 +20,10 @@ body {
   /* justify-content: center; */
 
   /* управление вспом осью */
-  align-items: stretch;
+  align-items: center;
 
+  /* управление рядами */
+  align-content: flex-end;
 
   /* управление переносом */
   flex-wrap: wrap;
