--- a/style.css
+++ b/style.css
@@ -21,14 +21,15 @@ body {
   flex-flow: row wrap;
 
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
 }
 
 .elem {
   padding: 20px 40px;
   border: 2px solid rgb(100, 5, 100);
   background-color: tomato;
-  margin: 0 20px; /* space-around */
+  margin: 20px 10px; /* space-around */
 }
 
 .elem span {
