--- a/style.css
+++ b/style.css
@@ -21,15 +21,22 @@ body {
   flex-flow: row wrap;
 
   align-items: flex-start;
-  justify-content: flex-start;
+  /* justify-content: space-between; */
   align-content: flex-start;
+
+  row-gap: 10px;
+  column-gap: 20px;
 }
 
 .elem {
   padding: 20px 40px;
   border: 2px solid rgb(100, 5, 100);
   background-color: tomato;
-  margin: 20px 10px; /* space-around */
+  /* margin-bottom: 10px; */
+}
+
+.elem + .elem {
+  /* margin-left: 20px; */
 }
 
 .elem span {
