--- a/style.css
+++ b/style.css
@@ -8,41 +8,28 @@ body {
 
 .flex-container {
   display: flex;
-
-  max-width: 1200px;
-  min-height: 500px;
-  height: 500px;
-
-  border: 3px solid black;
-  /* min-height: 50vh; */
-
-  /* главная ось */
-  /* направление */
-  flex-flow: row wrap;
-
-  align-items: flex-start;
   /* justify-content: space-between; */
-  align-content: flex-start;
-
+  flex-flow: row wrap;
   row-gap: 10px;
-  column-gap: 20px;
+
+  max-width: 500px;
+  /* min-height: 100px; */
+
+  border: 1px solid black;
+  border-radius: 10px;
+
+  padding: 10px 20px;
 }
 
-.elem {
-  padding: 20px 40px;
-  border: 2px solid rgb(100, 5, 100);
-  background-color: tomato;
-  /* margin-bottom: 10px; */
+.left-item,
+.right-item {
+  flex: 0.5;
 }
 
-.elem + .elem {
-  /* margin-left: 20px; */
+.left-item {
+  margin-left: auto;
 }
 
-.elem span {
-  background-color: yellow;
-}
-
-.new {
-  background-color: royalblue;
+.right-item {
+  text-align: right;
 }
